# depin-map-reduce-demo

./: Cargo.toml  README.md
proptest-regressions/unit_tests/: service.txt
src/: contract.rs  lib.rs  service.rs  state.rs
src/unit_tests/: contract.rs  service.rs
tests/: propagate.rs  readme_example.rs  single_chain.rs
